--- a/mack.html
+++ b/mack.html
@@ -37,7 +37,7 @@
                         <div class="uk-container uk-container-xlarge" uk-navbar>
                             <div class="uk-navbar-item uk-navbar-left uk-logo uk-link-reset">
                                 <a href="/gd/" class="fw-500 warm">
-                                    <img src="img/headshot.jpg" alt="" class="uk-border-circle uk-box-shadow-medium uk-float-left uk-margin-small-right" style="max-height:38px;border:3px solid #fff" /> 
+                                    <img src="img/headshot.webp" alt="" class="uk-border-circle uk-box-shadow-medium uk-float-left uk-margin-small-right" style="max-height:38px;border:3px solid #fff" /> 
                                     <span class="margin-small-right uk-width-auto">Brian French</span>&ensp;
                                 </a>
                             </div>
