--- a/index.html
+++ b/index.html
@@ -193,69 +193,70 @@
                     </div>
 
 
-                    <div class="uk-border-rounded-large">
-                        <div class="uk-grid-small uk-child-width-1-2 uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid uk-height-match="target: > div > div > .uk-card-body">
-                            <div>
-                                <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
-                                    <div class="uk-width-4-5 uk-width-4-5@s uk-margin-auto uk-margin-bottom">
-                                        <img src="img/aac.webp" class="uk-blend-luminosity" />
-                                    </div>
-                                    <div class="uk-card-body uk-padding-remove">
-                                        <p class="uk-text-muted fs-17 fw-600 uk-margin-remove">Lead Gen Campaign</p>
-                                        <p class="uk-text-muted fs-14 in uk-margin-remove">eBook, email &amp; landing page</p>
-                                    </div>
-                                    <div class="uk-margin-small-top">
-                                        <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case"><span class="uk-text-muted">Coming soon</span></div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div>
-                                <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
-                                    <div class="uk-width-4-5 uk-width-4-5@s uk-margin-auto uk-margin-bottom">
-                                        <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
-                                    </div>
-                                    <div class="uk-card-body uk-padding-remove">
-                                        <p class="uk-text-muted fs-17 fw-600 uk-margin-remove">Fundraising Appeal</p>
-                                        <p class="uk-text-muted fs-14 in uk-margin-remove">Direct Mail Package</p>
-                                    </div>
-                                    <div class="uk-margin-small-top">
-                                        <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                    <div class="uk-width-1-1 uk-overflow-auto">
+                        <div class="uk-flex uk-flex-top" uk-height-match="target: > div > div > .uk-card-body">
+                            
+                                <div id="aac" class="uk-width-1-1 uk-margin-small-right">
+                                    <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
+                                        <div class="uk-width-1-1 uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                            <img src="img/aac.webp" class="uk-blend-luminosity" />
+                                        </div>
+                                        <div class="uk-card-body uk-padding-remove">
+                                            <div class="fs-14 fw-500">Lead Gen Campaign</div>
+                                            <div class="fs-12 in">eBook, email &amp; landing page</div>
+                                        </div>
+                                        <div class="uk-margin-small-top">
+                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case"><span class="uk-text-muted">Coming soon</span></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div>
-                                <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
-                                    <div class="uk-width-4-5 uk-width-4-5@s uk-margin-auto uk-margin-bottom">
-                                        <img src="img/mack.webp" class="uk-blend-luminosity" />
+                                <div id="bsa" class="uk-width-1-1 uk-margin-small-right">
+                                    <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
+                                        <div class="uk-width-1-1 uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                            <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
+                                        </div>
+                                        <div class="uk-card-body uk-padding-remove">
+                                            <div class="fs-14 fw-500">Fundraising Appeal</div>
+                                            <div class="fs-12 in">Direct Mail Package</div>
+                                        </div>
+                                        <div class="uk-margin-small-top">
+                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                        </div>
                                     </div>
-                                    <div class="uk-card-body uk-padding-remove">
-                                        <p class="uk-text-muted fs-17 fw-600 uk-margin-remove">Lead Gen Survey</p>
-                                        <p class="uk-text-muted fs-14 in uk-margin-remove">Direct mail package, email &amp; survey website</p>
-                                    </div>
-                                    <div class="uk-margin-small-top">
-                                        <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
-                                    </div>
-
                                 </div>
-                            </div>
+                                <div id="mack" class="uk-width-1-1 uk-margin-small-right">
+                                    <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
+                                        <div class="uk-width-1-1 uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                            <img src="img/mack.webp" class="uk-blend-luminosity" />
+                                        </div>
+                                        <div class="uk-card-body uk-padding-remove">
+                                            <div class="fs-14 fw-500">Lead Gen Survey</div>
+                                            <div class="fs-12 in">Direct mail package, email &amp; survey website</div>
+                                        </div>
+                                        <div class="uk-margin-small-top">
+                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                        </div>
 
-                            <div>
-                                <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
-                                    <div class="uk-width-4-5 uk-width-4-5@s uk-margin-auto uk-margin-bottom">
-                                        <img src="img/rategenius.webp" class="uk-blend-luminosity" />
                                     </div>
-                                    <div class="uk-card-body uk-padding-remove">
-                                        <p class="uk-text-muted fs-17 fw-600 uk-margin-remove">Lead Gen </p>
-                                        <p class="uk-text-muted fs-14 in uk-margin-remove">Multivariate Direct Mail</p>
-                                    </div>
-                                    <div class="uk-margin-small-top">
-                                        <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
-                                    </div>
-
                                 </div>
-                            </div>
+
+                                <div id="rg" class="uk-width-1-1">
+                                    <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
+                                        <div class="uk-width-1-1 uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                            <img src="img/rategenius.webp" class="uk-blend-luminosity" />
+                                        </div>
+                                        <div class="uk-card-body uk-padding-remove">
+                                            <div class="fs-14 fw-500">Lead Gen </div>
+                                            <div class="fs-12 in">Multivariate Direct Mail</div>
+                                        </div>
+                                        <div class="uk-margin-small-top">
+                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            
                         </div>
                     </div>
                 </div>
