--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 
                     <div class="uk-width-1-1 uk-overflow-auto">
-                        <div class="uk-flex uk-flex-top" uk-height-match="target: > div > div > .uk-card-body">
+                        <div class="uk-flex uk-flex-top uk-margin-small-bottom" uk-height-match="target: > div > div > .uk-card-body">
                             
                                 <div id="aac" class="uk-width-1-1 uk-margin-small-right">
                                     <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
