--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
                             
                                 <div id="aac" class="uk-width-1-1 uk-margin-small-right">
                                     <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
-                                        <div class="uk-width-1-1 uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                        <div class="uk-width-small uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                             <img src="img/aac.webp" class="uk-blend-luminosity" />
                                         </div>
                                         <div class="uk-card-body uk-padding-remove">
-                                            <div class="fs-14 fw-500">Lead Gen Campaign</div>
+                                            <div class="fs-14 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
                                             <div class="fs-12 in">eBook, email &amp; landing page</div>
                                         </div>
                                         <div class="uk-margin-small-top">
@@ -213,11 +213,11 @@
 
                                 <div id="bsa" class="uk-width-1-1 uk-margin-small-right">
                                     <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
-                                        <div class="uk-width-1-1 uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                        <div class="uk-width-small uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                             <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
                                         </div>
                                         <div class="uk-card-body uk-padding-remove">
-                                            <div class="fs-14 fw-500">Fundraising Appeal</div>
+                                            <div class="fs-14 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
                                             <div class="fs-12 in">Direct Mail Package</div>
                                         </div>
                                         <div class="uk-margin-small-top">
@@ -227,11 +227,11 @@
                                 </div>
                                 <div id="mack" class="uk-width-1-1 uk-margin-small-right">
                                     <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
-                                        <div class="uk-width-1-1 uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                        <div class="uk-width-small uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                             <img src="img/mack.webp" class="uk-blend-luminosity" />
                                         </div>
                                         <div class="uk-card-body uk-padding-remove">
-                                            <div class="fs-14 fw-500">Lead Gen Survey</div>
+                                            <div class="fs-14 fw-500 uk-margin-xsmall-bottom">Lead Gen Survey</div>
                                             <div class="fs-12 in">Direct mail package, email &amp; survey website</div>
                                         </div>
                                         <div class="uk-margin-small-top">
@@ -243,11 +243,11 @@
 
                                 <div id="rg" class="uk-width-1-1">
                                     <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
-                                        <div class="uk-width-1-1 uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                        <div class="uk-width-small uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                             <img src="img/rategenius.webp" class="uk-blend-luminosity" />
                                         </div>
                                         <div class="uk-card-body uk-padding-remove">
-                                            <div class="fs-14 fw-500">Lead Gen </div>
+                                            <div class="fs-14 fw-500 uk-margin-xsmall-bottom">Lead Gen </div>
                                             <div class="fs-12 in">Multivariate Direct Mail</div>
                                         </div>
                                         <div class="uk-margin-small-top">
