--- a/index.html
+++ b/index.html
@@ -197,61 +197,61 @@
                         <div class="uk-flex uk-flex-top uk-margin-small-bottom" uk-height-match="target: > div > div > .uk-card-body">
                             
                                 <div id="aac" class="uk-width-1-1 uk-margin-small-right">
-                                    <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
+                                    <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
                                         <div class="uk-width-small uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                             <img src="img/aac.webp" class="uk-blend-luminosity" />
                                         </div>
                                         <div class="uk-card-body uk-padding-remove">
-                                            <div class="fs-14 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
+                                            <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
                                             <div class="fs-12 in">eBook, email &amp; landing page</div>
                                         </div>
                                         <div class="uk-margin-small-top">
-                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case"><span class="uk-text-muted">Coming soon</span></div>
+                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-width-1-1 uk-text-center uk-text-muted">Coming soon</div>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div id="bsa" class="uk-width-1-1 uk-margin-small-right">
-                                    <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
+                                    <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
                                         <div class="uk-width-small uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                             <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
                                         </div>
                                         <div class="uk-card-body uk-padding-remove">
-                                            <div class="fs-14 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
+                                            <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
                                             <div class="fs-12 in">Direct Mail Package</div>
                                         </div>
                                         <div class="uk-margin-small-top">
-                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-width-1-1 uk-text-center uk-text-muted">Coming soon</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div id="mack" class="uk-width-1-1 uk-margin-small-right">
-                                    <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
+                                    <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
                                         <div class="uk-width-small uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                             <img src="img/mack.webp" class="uk-blend-luminosity" />
                                         </div>
                                         <div class="uk-card-body uk-padding-remove">
-                                            <div class="fs-14 fw-500 uk-margin-xsmall-bottom">Lead Gen Survey</div>
+                                            <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Survey</div>
                                             <div class="fs-12 in">Direct mail package, email &amp; survey website</div>
                                         </div>
                                         <div class="uk-margin-small-top">
-                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-width-1-1 uk-text-center uk-text-muted">Coming soon</div>
                                         </div>
 
                                     </div>
                                 </div>
 
                                 <div id="rg" class="uk-width-1-1">
-                                    <div class="uk-card-default uk-card uk-padding uk-border-rounded-large uk-box-shadow-remove">
+                                    <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
                                         <div class="uk-width-small uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                             <img src="img/rategenius.webp" class="uk-blend-luminosity" />
                                         </div>
                                         <div class="uk-card-body uk-padding-remove">
-                                            <div class="fs-14 fw-500 uk-margin-xsmall-bottom">Lead Gen </div>
-                                            <div class="fs-12 in">Multivariate Direct Mail</div>
+                                            <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen </div>
+                                            <div class="fs-12 in">Multivariate direct mail package</div>
                                         </div>
                                         <div class="uk-margin-small-top">
-                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-case "><span class="uk-text-muted">Coming soon</span></div>
+                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-width-1-1 uk-text-center uk-text-muted">Coming soon</div>
                                         </div>
 
                                     </div>
