--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
-
-                    <div class="uk-width-1-1 uk-overflow-auto">
-                        <div class="uk-flex uk-flex-top uk-margin-small-bottom" uk-height-match="target: > div > div > .uk-card-body">
+                    <div class="uk-margin-top uk-container uk-container-large">
+                        <div class="uk-flex uk-flex-top uk-margin-small-bottom uk-overflow-auto " uk-height-match="target: > div > div > .uk-card-body">
                             
                                 <div id="aac" class="uk-width-1-1 uk-margin-right">
                                     <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
@@ -225,7 +225,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div id="mack" class="uk-width-1-1 uk-margin-small-right">
+                                <div id="mack" class="uk-width-1-1 uk-margin-right">
                                     <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
                                         <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                             <img src="img/mack.webp" class="uk-blend-luminosity" />
@@ -259,7 +259,7 @@
                             
                         </div>
                     </div>
-                </div>
+
             </div>
 
             <div class="uk-section uk-section-default">
