--- a/index.html
+++ b/index.html
@@ -193,72 +193,72 @@
                     </div>
                 </div>
 
-                    <div class="uk-margin-top uk-container uk-container-large">
-                        <div class="uk-flex uk-flex-top uk-margin-small-bottom uk-overflow-auto " uk-height-match="target: > div > div > .uk-card-body">
-                            
-                                <div id="aac" class="uk-width-1-1 uk-margin-right">
-                                    <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
-                                        <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
-                                            <img src="img/aac.webp" class="uk-blend-luminosity" />
-                                        </div>
-                                        <div class="uk-card-body uk-padding-remove uk-text-center@m">
-                                            <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
-                                            <div class="fs-12 in">eBook, email &amp; landing page</div>
-                                        </div>
-                                        <div class="uk-margin-small-top uk-text-center@m">
-                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
-                                        </div>
-                                    </div>
-                                </div>
+                <div class="uk-margin-top uk-container uk-container-large">
+                    <div class="uk-flex uk-flex-top uk-margin-small-bottom uk-overflow-auto slide-container" uk-height-match="target: > div > div > .uk-card-body">
 
-                                <div id="bsa" class="uk-width-1-1 uk-margin-right">
-                                    <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
-                                        <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
-                                            <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
-                                        </div>
-                                        <div class="uk-card-body uk-padding-remove uk-text-center@m">
-                                            <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
-                                            <div class="fs-12 in">Direct Mail Package</div>
-                                        </div>
-                                        <div class="uk-margin-small-top uk-text-center@m">
-                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
-                                        </div>
-                                    </div>
+                        <div id="aac" class="uk-width-1-1 uk-margin-right slide">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
+                                <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                    <img src="img/aac.webp" class="uk-blend-luminosity" />
                                 </div>
-                                <div id="mack" class="uk-width-1-1 uk-margin-right">
-                                    <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
-                                        <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
-                                            <img src="img/mack.webp" class="uk-blend-luminosity" />
-                                        </div>
-                                        <div class="uk-card-body uk-padding-remove uk-text-center@m">
-                                            <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Survey</div>
-                                            <div class="fs-12 in">Direct mail package, email &amp; survey website</div>
-                                        </div>
-                                        <div class="uk-margin-small-top uk-text-center@m">
-                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
-                                        </div>
-
-                                    </div>
+                                <div class="uk-card-body uk-padding-remove uk-text-center@m">
+                                    <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Campaign</div>
+                                    <div class="fs-12 in">eBook, email &amp; landing page</div>
                                 </div>
-
-                                <div id="rg" class="uk-width-1-1">
-                                    <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
-                                        <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
-                                            <img src="img/rategenius.webp" class="uk-blend-luminosity" />
-                                        </div>
-                                        <div class="uk-card-body uk-padding-remove uk-text-center@m">
-                                            <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen </div>
-                                            <div class="fs-12 in">Multivariate direct mail package</div>
-                                        </div>
-                                        <div class="uk-margin-small-top uk-text-center@m">
-                                            <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
-                                        </div>
-
-                                    </div>
+                                <div class="uk-margin-small-top uk-text-center@m">
+                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
                                 </div>
-                            
+                            </div>
                         </div>
+
+                        <div id="bsa" class="uk-width-1-1 uk-margin-right slide">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
+                                <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                    <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
+                                </div>
+                                <div class="uk-card-body uk-padding-remove uk-text-center@m">
+                                    <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Fundraising Appeal</div>
+                                    <div class="fs-12 in">Direct Mail Package</div>
+                                </div>
+                                <div class="uk-margin-small-top uk-text-center@m">
+                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="mack" class="uk-width-1-1 uk-margin-right slide">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
+                                <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                    <img src="img/mack.webp" class="uk-blend-luminosity" />
+                                </div>
+                                <div class="uk-card-body uk-padding-remove uk-text-center@m">
+                                    <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen Survey</div>
+                                    <div class="fs-12 in">Direct mail package, email &amp; survey website</div>
+                                </div>
+                                <div class="uk-margin-small-top uk-text-center@m">
+                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div id="rg" class="uk-width-1-1 slide">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
+                                <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
+                                    <img src="img/rategenius.webp" class="uk-blend-luminosity" />
+                                </div>
+                                <div class="uk-card-body uk-padding-remove uk-text-center@m">
+                                    <div class="fs-16 fw-500 uk-margin-xsmall-bottom">Lead Gen </div>
+                                    <div class="fs-12 in">Multivariate direct mail package</div>
+                                </div>
+                                <div class="uk-margin-small-top uk-text-center@m">
+                                    <div class="uk-border-pill uk-label uk-background-muted fs-12 fw-500 uk-text-center uk-text-muted">Coming soon</div>
+                                </div>
+
+                            </div>
+                        </div>
+
                     </div>
+                </div>
 
             </div>
 
