--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                     </div>
                 </div>
 
-                <div class="uk-margin-top uk-container uk-container-large">
-                    <div class="uk-flex uk-flex-top uk-margin-small-bottom uk-overflow-auto slide-container" uk-height-match="target: > div > div > .uk-card-body">
+                <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true">
+                    <div class="uk-slider-items uk-grid uk-margin-top" uk-height-match="target: > div > div > .uk-card-body">
 
-                        <div id="aac" class="uk-width-1-1 uk-margin-right slide">
+                        <div id="aac" class="uk-width-medium uk-width-1-1 uk-width-1-4@m">
                             <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/aac.webp" class="uk-blend-luminosity" />
@@ -211,7 +211,7 @@
                             </div>
                         </div>
 
-                        <div id="bsa" class="uk-width-1-1 uk-margin-right slide">
+                        <div id="bsa" class="uk-width-medium uk-width-1-4@m">
                             <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
@@ -225,7 +225,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="mack" class="uk-width-1-1 uk-margin-right slide">
+                        <div id="mack" class="uk-width-medium uk-width-1-4@m">
                             <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/mack.webp" class="uk-blend-luminosity" />
@@ -241,7 +241,7 @@
                             </div>
                         </div>
 
-                        <div id="rg" class="uk-width-1-1 slide">
+                        <div id="rg" class="uk-width-medium uk-width-1-4@m">
                             <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/rategenius.webp" class="uk-blend-luminosity" />
