Slider Item Width Fix

--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
                     </div>
                 </div>
 
-                <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true">
-                    <div class="uk-slider-items uk-grid uk-margin-top" uk-height-match="target: > div > div > .uk-card-body">
+                <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite: true" uk-height-match="target: > div > div > .uk-card-default">
+                    <div class="uk-slider-items uk-margin-top" uk-height-match="target: > div > .uk-card-body">
 
-                        <div id="aac" class="uk-width-medium uk-width-1-1 uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
+                        <div id="aac" class="uk-width-medium uk-width-1-4@m">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/aac.webp" class="uk-blend-luminosity" />
                                 </div>
@@ -212,7 +212,7 @@
                         </div>
 
                         <div id="bsa" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/bsa-sjac.webp" class="uk-blend-luminosity" />
                                 </div>
@@ -226,7 +226,7 @@
                             </div>
                         </div>
                         <div id="mack" class="uk-width-medium uk-width-1-4@m">
-                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove">
+                            <div class="uk-card-default uk-card uk-padding-small uk-border-rounded-large uk-box-shadow-remove uk-margin-right">
                                 <div class="uk-width-medium uk-width-4-5@m uk-margin-auto uk-margin-bottom">
                                     <img src="img/mack.webp" class="uk-blend-luminosity" />
                                 </div>
